--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Revize</title>
+    <title><em>Revize</em></title>
     <link rel="stylesheet" href="welcome.css" />
     <link rel="shortcut icon" href="/favicon.ico">
   </head>
